updates links to bitcoin mixers & chan forums!

--- a/index.html
+++ b/index.html
@@ -6,11 +6,42 @@
 <main>
 
   <h4 id="dweb-connections">Dark Web Connections</h4>
-  <a href="http://s4k4ceiapwwgcm3mkb6e4diqecpo7kvdnfr5gg7sph7jjppqkvwwqtyd.onion/">୨୧・OnionLinks v3 (Links Database)
+   <a href="http://s4k4ceiapwwgcm3mkb6e4diqecpo7kvdnfr5gg7sph7jjppqkvwwqtyd.onion/">୨୧・OnionLinks v3 (Links Database)
 <br/>
-  <a href="http://jgwe5cjqdbyvudjqskaajbfibfewew4pndx52dye7ug3mt3jimmktkid.onion/">୨୧・Pug's Ultimate Dark Web Guide (Dark Web Guide)
+   <a href="http://6nhmgdpnyoljh5uzr5kwlatx2u3diou4ldeommfxjz3wkhalzgjqxzqd.onion/">୨୧・The Hidden Wiki (Links Database)
 <br/>
-  <a href="http://picochanwvqfa2xsrfzlul4x4aqtog2eljll5qnj5iagpbhx2vmfqnid.onion/">୨୧・PicoChan (Online Forum)</a>
+  <a href="http://2jwcnprqbugvyi6ok2h2h7u26qc6j5wxm7feh3znlh2qu3h6hjld4kyd.onion/">୨୧・The Hidden Wiki 2 (Links Database)</a>
+
+  <h4 id="bitcoin-anonymous">Bitcoin Anonymous</h4>
+   <a href="hqfld5smkr4b4xrjcco7zotvoqhuuoehjdvoin755iytmpk4sm7cbwad.onion">୨୧・Mixabit (Anonymous Bitcoin Mixer)</a>
+<br/>
+   <a href="http://y22arit74fqnnc2pbieq3wqqvkfub6gnlegx3cl6thclos4f7ya7rvad.onion/">୨୧・Dark Mixer (Anonymous Bitcoin Mixer)</a>
+<br/>
+   <a href="p2qzxkca42e3wccvqgby7jrcbzlf6g7pnkvybnau4szl5ykdydzmvbid.onion">୨୧・Onionwallet (Anonymous Bitcoin Mixer)</a>
+<br/>
+   <a href="mp3fpv6xbrwka4skqliiifoizghfbjy5uyu77wwnfruwub5s4hly2oid.onion">୨୧・EasyCoin (Anonymous Bitcoin Mixer)</a>
+<br/>
+  <h4 id="commercial-services">Commercial Services</h4>
+   <a href="http://jgwe5cjqdbyvudjqskaajbfibfewew4pndx52dye7ug3mt3jimmktkid.onion/">୨୧・DarkWebHackers (Dark Web Hackers for hire)</a>
+<br/>
+   <a href="http://jgwe5cjqdbyvudjqskaajbfibfewew4pndx52dye7ug3mt3jimmktkid.onion/">୨୧・Mobile Store (Best unlocked cell phones vendor)</a>
+<br/>
+   <a href="http://jgwe5cjqdbyvudjqskaajbfibfewew4pndx52dye7ug3mt3jimmktkid.onion/">୨୧・OnionIdentityServices (Fake passports and ID cards for bitcoin</a>
+<br/>
+   <a href="http://jgwe5cjqdbyvudjqskaajbfibfewew4pndx52dye7ug3mt3jimmktkid.onion/">୨୧・UkGunsAndAmmo (UK guns and amo store)</a>
+<br/>
+   <a href="http://jgwe5cjqdbyvudjqskaajbfibfewew4pndx52dye7ug3mt3jimmktkid.onion/">୨୧・USAcitizenship (become a citizen of the USA)</a>
+<br/>
+  <a href="http://jgwe5cjqdbyvudjqskaajbfibfewew4pndx52dye7ug3mt3jimmktkid.onion/">୨୧・Pug's Ultimate Dark Web Guide (Dark Web Guide)</a>
+<br/>
+  <h4 id="darknet-chans">Chans</h4>
+  <a href="http://4usoivrpy52lmc4mgn2h34cmfiltslesthr56yttv2pxudd3dapqciyd.onion/">୨୧・8chan (Online Forum)</a>
+<br/>
+  <a href="http://nanochanqzaytwlydykbg5nxkgyjxk3zsrctxuoxdmbx5jbh2ydyprid.onion/">୨୧・Nanochan (Online Forum)</a>
+<br/>
+  <a href="http://enxx3byspwsdo446jujc52ucy2pf5urdbhqw3kbsfhlfjwmbpj5smdad.onion/">୨୧・Endchan (Online Forum)</a>
+<br/>
+  <a href="http://dngtk6iydmpokbyyk3irqznceft3hze6q6rasrqlz46v7pq4klxnl4yd.onion/">୨୧・256chan (Online Forum)</a>
 <br/>
   <a href="http://nanochanqzaytwlydykbg5nxkgyjxk3zsrctxuoxdmbx5jbh2ydyprid.onion/">୨୧・NanoChan (Online Forum)</a>
 <br/>
@@ -31,3 +62,4 @@
 
 </main>
 
+<center><h9>info@krispages.com</h9></center>
